log

Thu 14 Mar 2024 08:31:58 PM UTC: 
 exercises.c | 30 ++++++++++++++++++++++++++++--
 1 file changed, 28 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
11fdffc
Thu 14 Mar 2024 08:49:37 PM UTC: 
 exercises.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
5e9da34
Thu 14 Mar 2024 08:50:37 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 30/70
5db7ffa
Thu 14 Mar 2024 08:59:19 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:85:21: error: unused variable ‘k’ [-Werror=unused-variable]
   85 |   int i = 0, j = 0, k = 0;
      |                     ^
exercises.c:85:14: error: unused variable ‘j’ [-Werror=unused-variable]
   85 |   int i = 0, j = 0, k = 0;
      |              ^
exercises.c:85:7: error: unused variable ‘i’ [-Werror=unused-variable]
   85 |   int i = 0, j = 0, k = 0;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
6933f48
Thu 14 Mar 2024 08:59:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
04ef483
Thu 14 Mar 2024 09:08:16 PM UTC: 
 exercises.c | 25 ++++++++++++++++++++++---
 1 file changed, 22 insertions(+), 3 deletions(-)
 tests:  0|3
total_score: 40/70
6ebd1c5
Thu 14 Mar 2024 09:11:04 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
e415724
Thu 14 Mar 2024 09:14:57 PM UTC: 
 exercises.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
 tests:  0|2
total_score: 50/70
adaea28
Sat 16 Mar 2024 12:06:57 AM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|2
total_score: 50/70
5beb319
